--- a/goguoso/.settings/org.eclipse.wst.common.component
+++ b/goguoso/.settings/org.eclipse.wst.common.component
@@ -2,8 +2,10 @@
     <wb-module deploy-name="goguoso">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/web"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <property name="context-root" value="goguoso"/>
         <property name="java-output-path" value="/goguoso/target/classes"/>
     </wb-module>
